--- a/src/app/toolbar/toolbar.component.css
+++ b/src/app/toolbar/toolbar.component.css
@@ -1,46 +1,50 @@
-.scrollable-menu {
-    height: auto;
-    max-height: 400px;
-    overflow-x: hidden;
+.responsive{
+  display:none ;
+}
+@media screen and (min-width: 1024px) {
+  .responsive{
+    display: revert;
+    position: absolute;
+    margin-top: -23px;
+  }
+  .dropdown-item{
+    padding: 20px;
+    margin-top: 20px;
+  }
+  .offcanvas{
+  padding: 120px;
+  }
+
+  offcanvas-body{
+    padding:230px
+  } 
+  .dropdown{
+    padding: 6px;
+  }
+
+
 }
 
-.menu ul li {
-    position:relative;
-    float:left;
-    margin:0;
-    padding:0;
-    color: #ffffff;
+@media screen and (max-width: 1023px) {
+  .responsive{
+    display: revert;
+    position: absolute;
+    margin-top: -23px;
   }
-  .menu ul ul {
-    display:none;
-    position:absolute;
-    top:100%;
-    left:0;
-    padding:0;
-    z-index: 2;
+  .dropdown-item{
+    padding: 20px;
+    margin-top: 20px;
+  }
+  .offcanvas{
+  padding: 120px;
+  }
+  .dropdown{
+    padding: 6px;
+  }
+  offcanvas-body{
+    padding:230px
   } 
-  .menu ul ul li {
-    float:none;
-    width:150px
-  }
-  .menu ul ul a {
-    line-height:150%;
-    padding:10px 59px 14px 20px;
-  }
-  .menu ul li:hover > ul {
-    display:block;
-  }
-  .menu li li a {
-  font-size:80%;
-  } 
-  .menu li:hover ul ul {
-  display:none;
-  } 
-  .menu li:hover ul {
-      display:block;
-  }
-  .menu li li:hover ul {
-      display:block; 
-      margin-left:200px; 
-      margin-top:-35px; 
-  }		
+
+}
+
+
