modifications of responsive measures for the toolbar

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,6 +7,9 @@
         <a class="btn company-detail-button btn-lg" href="https://www.Mundial Autos.com.co/Mundial Autos/contacto" role="button">{{ "HOME.TEXT_4" | translate }}</a>
     </div>
 </div> -->
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+
 <app-toolbar ></app-toolbar>
 
 <br>
