--- a/src/styles.css
+++ b/src/styles.css
@@ -28,5 +28,15 @@
 nav{
     margin-top: -54px;
 }
+.card{
+    position: initial;
+}
 
+.col-sm-12{
+    position: static;
+}
+
+.col-6{
+    position: static;
+}
 
