--- a/src/app/club/pages-statics/inicio/inicio.component.html
+++ b/src/app/club/pages-statics/inicio/inicio.component.html
@@ -1,8 +1,8 @@
-<link href="./../../../../assets/imagenes/arys/logo.png" rel="icon">
+<!-- <link href="./../../../../assets/imagenes/arys/logo.png" rel="icon">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Roboto:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-
+ -->
 
  <header id="header" class="header d-flex align-items-center">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
@@ -89,11 +89,11 @@ Urb. Los Palos Grandes,<br>1060 Chacao,<br>Caracas.<br>
       </div>
     </div>
   </footer>
-  <script src="./styles_Club/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- <script src="./styles_Club/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="./styles_Club/vendor/aos/aos.js"></script>
   <script src="./styles_Club/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="./styles_Club/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="./styles_Club/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="./styles_Club/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="./styles_Club/js/main.js"></script>
- 
+  -->
