--- a/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
+++ b/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+
 <app-toolbar></app-toolbar>
 <div class="container">
   <div class="row mt-5" *ngIf="alert.show">
