--- a/src/app/toolbar/toolbar.component.css
+++ b/src/app/toolbar/toolbar.component.css
@@ -1,4 +1,4 @@
-.responsive{
+/* .responsive{
   display:none ;
 }
 @media screen and (min-width: 1024px) {
@@ -45,6 +45,6 @@
     padding:230px
   } 
 
-}
+} */
 
 
