--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,24 +1,33 @@
-
-
-<link href="./../../../../assets/imagenes/arys/logo.png" rel="icon">
+<!-- 
+>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Roboto:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"> -->
 
  <header id="header" class="d-flex align-items-center">
   <div class="container-fluid container-xl d-flex align-items-center justify-content-between" style="margin-left: -5px;">
     <a href="inicio" class="image d-flex align-items-center">
       <img class="logocompany"/>
     </a>
+      <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
+      <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
     <nav id="navbar" class="navbar">  
       <ul *ngIf="auth" >
-        <li class="nav-item dropdown" *ngFor="let group of groupList">
+              <!-- <li class="dropdown" *ngFor="let group of groupList"><a>{{ group.xgrupo | translate }} <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+                <ul>
+                  <a routerLink="{{ module.xruta }}" *ngFor="let module of group.modules">{{ module.xmodulo | translate }}</a>
+                </ul>
+              </li> -->
+
+
+        <li class="dropdown" *ngFor="let group of groupList">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             {{ group.xgrupo | translate }}
           </a>
-           <ul class="dropdown" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-active" routerLink="{{ module.xruta }}" *ngFor="let module of group.modules" style="color: #4c4c4c;font-family: inherit;/* font-weight: bold; */font-size: 15px;text-transform: capitalize;;padding: 7px 12px 9px 12px;">{{ module.xmodulo | translate }}</a>
+           <ul aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-active classList" routerLink="{{ module.xruta }}" *ngFor="let module of group.modules" style="color: #4c4c4c;font-family: inherit;/* font-weight: bold; */font-size: 15px;text-transform: capitalize;;padding: 7px 12px 9px 12px;">{{ module.xmodulo | translate }}</a>
            </ul> 
         </li>
         <li *ngIf="auth" class="nav-item">
@@ -34,7 +43,7 @@
   </div>
 </header> 
 
-<div class="responsive mobile-nav-toggle mobile-nav-show">
+<!-- <div class="responsive mobile-nav-toggle mobile-nav-show">
 <div class="offcanvas offcanvas-start w-25" tabindex="-1" id="offcanvas" data-bs-keyboard="false" data-bs-backdrop="false" style="background-color: #00066f; align-items: center;" >
   <div class="offcanvas-header">
     <a href="inicio" class="image d-flex align-items-center">
@@ -67,10 +76,10 @@
 </div>
 </div>
 
-</div>
+</div> -->
 
 
-<script src="../../styles_Club/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<!-- <script src="../../styles_Club/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 <script src="../../styles_Club/vendor/aos/aos.js"></script>
 
@@ -83,5 +92,5 @@
 <script src="../../styles_Club/vendor/purecounter/purecounter_vanilla.js"></script>
 
 <script src="../../styles_Club/js/main.js"></script>
-
+ -->
 
