--- a/src/app/toolbar/toolbar.component.css
+++ b/src/app/toolbar/toolbar.component.css
@@ -1,50 +1,4 @@
-/* .responsive{
-  display:none ;
+
+.navbar>ul>li{
+  padding: 8px 4px 0px 13px;
 }
-@media screen and (min-width: 1024px) {
-  .responsive{
-    display: revert;
-    position: absolute;
-    margin-top: -23px;
-  }
-  .dropdown-item{
-    padding: 20px;
-    margin-top: 20px;
-  }
-  .offcanvas{
-  padding: 120px;
-  }
-
-  offcanvas-body{
-    padding:230px
-  } 
-  .dropdown{
-    padding: 6px;
-  }
-
-
-}
-
-@media screen and (max-width: 1023px) {
-  .responsive{
-    display: revert;
-    position: absolute;
-    margin-top: -23px;
-  }
-  .dropdown-item{
-    padding: 20px;
-    margin-top: 20px;
-  }
-  .offcanvas{
-  padding: 120px;
-  }
-  .dropdown{
-    padding: 6px;
-  }
-  offcanvas-body{
-    padding:230px
-  } 
-
-} */
-
-
